# rws

./: .gitignore  CMakeLists.txt  README.md  apps.py  main.py  package.xml  requirements.txt  setup.py
.github/workflows/: ci.yaml
config/: pr2.srdf  sensors_dummy.yaml
frontend/: .jshintrc  Gruntfile.js  bower.json  gulpfile.js  package-lock.json  package.json
frontend/app/: index.html  manifest.json
frontend/app/elements/: elements.html  routing.html
frontend/app/scripts/: app.js
frontend/app/styles/: app-theme.html  main.css  shared-styles.html
frontend/app/test/: index.html  rws-app-basic.html  rws-index-basic.html  rws-main-basic.html  rws-settings-basic.html  rws-setup-basic.html  (+1 more)
frontend/src/: index.html
launch/: development.launch  kinect.launch  pr2_moveit.launch  pr2_planning_context.launch  rws.launch  rws_fetch.launch  rws_launch.sh
resources/gitkit/: README.md
scripts/: development_server.py  production_server.py
src/: apps.py  config.py  development_server.py  example_secrets.py  main.py  production_server.py  robot_start_stop.py  robot_web_server.py  robot_web_server_test.py  server_factory.py  test_robot_start_stop.py  test_robot_web_server.py  user_presence.py  users.py  websocket.py
src/rws/: config.py  example_secrets.py  robot_web_server.py  server_factory.py  static  websocket.py
src/static/: bower.json
src/templates/: app.html  base.html  chrome.html  home.html  login.html  oauth2callback.html
static/css/: chrome.css
templates/: base.html  chrome.html  home.html  index.html  login.html  oauth2callback.html
(+9 files in other folders)
