<?xml version="1.0"?>
<package format="2">
  <name>rws</name>
  <version>0.0.0</version>
  <description>Robot web server</description>

  <maintainer email="jstn@cs.washington.edu">Justin Huang</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslint</build_depend>
  <build_depend>rospy</build_depend>
  <exec_depend>libffi-dev</exec_depend>
  <exec_depend>rosbridge_suite</exec_depend>
  <exec_depend>rospy</exec_depend>

</package>
